[project]
name = "syriantaxescli"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "aaltatan", email = "a.altatan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "syriantaxes>=0.1.1",
    "typer>=0.24.1",
    "typer-di>=0.1.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aaltatan/syriantaxescli"
"Issues" = "https://github.com/aaltatan/syriantaxescli/issues"

[project.scripts]
sytax = "syriantaxescli.controllers:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
